YDA-5438: Fix button break on move, copy error

--- a/static/src/uu/index.scss
+++ b/static/src/uu/index.scss
@@ -14,7 +14,7 @@
     }
 
     /* File browser rows */
-    .browse, .deposit-delete, .page-link, .system-metadata-items, .name {
+    .browse, .deposit-delete, .page-link, .system-metadata-items, .name, .dlg-browse {
         color: $white;
     }
 
